# traffic-management-uav

./: CMakeLists.txt  README.md  main.cpp
data_capture/: CMakeLists.txt  CMakeLists.txt~  main.cpp
data_capture/include/: I2Cdev.cpp  MPU6050_6Axis_MotionApps20.h  TinyGPS++.cpp  TinyGPS++.h  aux.cpp  aux.h  bmp180.cpp  bmp180.h  hmc5883.cpp  hmc5883.h  i2c.cpp  i2c.h  log.cpp  log.h  millis.c  millis.h  neo-6m.cpp  neo-6m.h  sensors-data.h  serial.cpp  serial.h
hog-svm_trainer/: CMakeLists.txt  hog-svm-trainer.cpp
include/: aux.cpp  aux.h  bgtracking.cpp  bgtracking.h  camera.h  car.cpp  car.h  config.h  detect.cpp  detect.h  sensors_data.h
