cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project(traffic-man)
find_package(Threads REQUIRED)
find_package(OpenCV 3.0.0 REQUIRED)
add_executable(traffic-man main.cpp)
target_link_libraries(traffic-man Threads::Threads)
target_link_libraries(traffic-man ${OpenCV_LIBS})
target_link_libraries(traffic-man ${CMAKE_SOURCE_DIR}/include/aux.cpp)
target_link_libraries(traffic-man ${CMAKE_SOURCE_DIR}/include/bgtracking.cpp)
target_link_libraries(traffic-man ${CMAKE_SOURCE_DIR}/include/car.cpp)
target_link_libraries(traffic-man ${CMAKE_SOURCE_DIR}/include/detect.cpp)
