cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
project(data-cap)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(data-cap main.cpp)
find_package(OpenCV 3.0.0 REQUIRED)
target_link_libraries(data-cap Threads::Threads)
target_link_libraries(data-cap ${OpenCV_LIBS})
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/bmp180.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/hmc5883.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/I2Cdev.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/log.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/millis.c)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/MPU6050.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/neo-6m.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/TinyGPS++.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/i2c.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/serial.cpp)
target_link_libraries(data-cap ${CMAKE_SOURCE_DIR}/include/aux.cpp)
